# ML-CPP

./: .gitignore  CMakeLists.txt  README.md  predictions.csv  test.csv  train.csv
examples/datasets/persons/: test.csv
examples/decision_tree_classifier/: main.cpp
examples/logistic_with_pca_option/: main.cpp
include/L/: ClassificationMetrics.hpp  DataFrame.hpp  DecisionTreeClassifier.hpp  LinearRegression.hpp  LogisticRegression.hpp  PrincipalComponentAnalysis.hpp  RegressionMetrics.hpp
include/U/: MatrixUtils.cpp  MatrixUtils.hpp  TreeUtils.cpp  TreeUtils.hpp
src/: ClassificationMetrics.cpp  DataFrame.cpp  DecisionTreeClassifier.cpp  LinearRegression.cpp  LogisticRegression.cpp  PrincipalComponentAnalysis.cpp  RegressionMetrics.cpp  main.cpp
